logs/products.memcachedmanager.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/MemcachedManager'...
Compiling './lib/python3.5/site-packages/Products/MemcachedManager/MemcachedManager.py'...
***   File "./lib/python3.5/site-packages/Products/MemcachedManager/MemcachedManager.py", line 77
    except MemcachedError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/MemcachedManager/dtml'...
Listing './lib/python3.5/site-packages/Products/MemcachedManager/tests'...
Compiling './lib/python3.5/site-packages/Products/MemcachedManager/tests/memcache.py'...
***   File "./lib/python3.5/site-packages/Products/MemcachedManager/tests/memcache.py", line 120
    raise ValueError, 'invalid key: "%s"' % key
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/MemcachedManager/tests/testMemcacheStub.py'...
***   File "./lib/python3.5/site-packages/Products/MemcachedManager/tests/testMemcacheStub.py", line 100
    print 'testing', mc, '\n\tfrom', mcm
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.MemcachedManager-1.1b2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
